tests/functional/lang/eval-fail/assert-equal-list-length.err.exp
error:
       … while evaluating the condition of the assertion '([ (1) (0) ] == [ (10) ])'
         at /pwd/lang/eval-fail/assert-equal-list-length.nix:1:1:
            1| assert
             | ^
            2|   [

       error: list of size '2' is not equal to list of size '1', left hand side is '[ 1 0 ]', right hand side is '[ 10 ]'
